# skill-sommelier

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: make-slides  python-to-chtc  skill-status  sync-skills
.github/: user-profile.md
.github/workflows/: claude.yml  release.yml  weekly-discover.yml  weekly-self-evolve.yml
claude-settings/: README.md  settings.json
claude-settings/.claude/: statusline-command.sh
prompt_sync/: app.py
skills/design-postgres-tables/: SKILL.md
skills/discover-skills/: SKILL.md
skills/init/: SKILL.md
skills/make-slides/: SKILL.md
skills/modern-python/: SKILL.md
skills/planning-with-files/: SKILL.md
skills/python-to-chtc/: SKILL.md
skills/search-first/: SKILL.md
skills/self-evolve/: SKILL.md
skills/self-release/: SKILL.md
skills/self-update/: SKILL.md
skills/simplify-repo/: SKILL.md
skills/skill-craft/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-improver/: SKILL.md
skills/skill-status/: SKILL.md
skills/ss-arxiv-database/: SKILL.md
skills/ss-autoresearch/: SKILL.md
skills/ss-caveman/: SKILL.md
skills/ss-citation-cff/: SKILL.md
skills/ss-claude-api/: SKILL.md
skills/ss-cli2task/: SKILL.md
skills/ss-create-release-script/: SKILL.md
skills/ss-database-optimizer/: SKILL.md
skills/ss-design-postgres-tables/: SKILL.md
skills/ss-devops-engineer/: SKILL.md
skills/ss-diagnose/: SKILL.md
skills/ss-discover-skills/: SKILL.md
skills/ss-docs-update/: SKILL.md
(+65 files in other folders)
