[project]
name = "prompt-sync"
version = "0.1.0"
authors = [
    { name = "Jason Lo", email = "lcmjlo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.1.1",
    "typer>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[project.scripts]
psync = "prompt_sync.app:main"
